--- a/MegaDev/Experiments/wpa_supplicant.conf
+++ b/MegaDev/Experiments/wpa_supplicant.conf
@@ -7,3 +7,18 @@ network={
 	psk="Raspberry13"
 	key_mgmt=WPA-PSK
 }
+network={
+	ssid="Megadish"
+    psk="Raspberry13"
+    key_mgmt=WPA-PSK
+}
+network={
+    ssid="Crossbow"
+    psk="loblocks13"
+    key_mgmt=WPA-PSK
+}
+network={
+	ssid="Megadish4G"
+    psk="Raspberry13"
+    key_mgmt=WPA-PSK
+}
